--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 XlsxWriter~=3.0.2
+WTForms==3.0.0
 requests~=2.26.0
-WTForms~=2.3.3
 Werkzeug~=2.0.2
 Flask~=2.0.2
 Flask-Login
 Flask-SQLAlchemy
-Flask-Migrate
+Flask-WTF
