--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-XlsxWriter~=3.0.2
-WTForms~=3.0.0
+XlsxWriter~=3.0.3
+WTForms~=3.0.1
 requests==2.27.1
 Werkzeug~=2.0.3
 Flask~=2.0.3
-Flask-Login
-Flask-Admin
-Flask-SQLAlchemy
-Flask-WTF
+Flask-Login~=0.6.0
+Flask-Admin~=1.6.0
+Flask-SQLAlchemy~=2.5.1
+Flask-WTF~=1.0.1
 openpyxl~=3.0.9
-python-docx
+python-docx~=0.8.11
