--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+credentials.py
 app.db
 
 # Byte-compiled / optimized / DLL files
@@ -132,3 +133,4 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+!/credentials.py
