--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 XlsxWriter~=3.0.3
 WTForms~=3.0.1
 requests==2.27.1
-Werkzeug~=2.0.3
-Flask~=2.0.3
-Flask-Login~=0.6.0
+Werkzeug==2.1.2
+Flask==2.1.2
+Flask-Login==0.6.1
 Flask-Admin~=1.6.0
 Flask-SQLAlchemy~=2.5.1
 Flask-WTF~=1.0.1
@@ -11,3 +11,4 @@ openpyxl~=3.0.9
 python-docx~=0.8.11
 python-dotenv~=0.20.0
 pytest~=7.1.2
+icalendar~=4.0.9
