--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-XlsxWriter~=3.0.3
-WTForms~=3.0.1
 requests==2.27.1
+WTForms~=3.0.1
 Werkzeug==2.1.2
 Flask==2.1.2
 Flask-Login==0.6.1
@@ -12,3 +11,5 @@ python-docx~=0.8.11
 python-dotenv~=0.20.0
 pytest~=7.1.2
 icalendar~=4.0.9
+pytz~=2022.1
+python-telegram-bot~=13.11
