--- a/logging.conf
+++ b/logging.conf
@@ -26,7 +26,7 @@ args=(sys.stdout,)
 [handler_fileHandler]
 class=handlers.RotatingFileHandler
 formatter=simpleFormatter
-args=('logs/system.log', 'w')
+args=('logs/system.log', 'a')
 maxBytes=5000000
 backupCount=5
 
