--- a/requirements.txt
+++ b/requirements.txt
@@ -6,14 +6,14 @@ Flask-Login==0.6.1
 Flask-Admin~=1.6.0
 Flask-SQLAlchemy~=2.5.1
 Flask-WTF~=1.0.1
-openpyxl~=3.0.9
+openpyxl==3.0.10
 python-docx~=0.8.11
 python-dotenv~=0.20.0
 pytest~=7.1.2
 icalendar~=4.0.9
 pytz~=2022.1
 aiogram~=2.20
-asgiref~=3.5.1
-httpx~=0.22.0
+asgiref==3.5.2
+httpx==0.23.0
 async-cache~=1.1.1
 phpserialize~=1.3
