--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ python-docx~=0.8.11
 python-dotenv~=0.20.0
 pytest~=7.1.2
 pytest-asyncio~=0.18.3
+pytest-httpx~=0.21.0
 icalendar~=4.0.9
 pytz~=2022.1
 aiogram==2.21
