--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,19 @@
 WTForms~=3.0.1
-Werkzeug==2.2.0
-Flask==2.1.3
+Werkzeug==2.2.2
+Flask==2.2.2
 Flask-Login==0.6.2
 Flask-Admin~=1.6.0
 Flask-SQLAlchemy~=2.5.1
 Flask-WTF~=1.0.1
 openpyxl==3.0.10
 python-docx~=0.8.11
-python-dotenv~=0.20.0
-pytest~=7.1.2
+python-dotenv==0.21.0
+pytest==7.1.3
 pytest-asyncio==0.19.0
 pytest-httpx~=0.21.0
 icalendar==4.1.0
-pytz~=2022.1
-aiogram==2.21
+pytz==2022.2.1
+aiogram==2.22.1
 asgiref==3.5.2
 httpx==0.23.0
 async-cache~=1.1.1
