--- a/requirements.txt
+++ b/requirements.txt
@@ -8,11 +8,11 @@ Flask-WTF~=1.0.1
 openpyxl==3.0.10
 python-docx~=0.8.11
 python-dotenv==0.21.0
-pytest==7.1.3
-pytest-asyncio==0.19.0
-pytest-httpx~=0.21.0
-icalendar==4.1.0
-pytz==2022.4
+pytest==7.2.0
+pytest-asyncio==0.20.1
+pytest-httpx==0.21.1
+icalendar==5.0.1
+pytz==2022.5
 aiogram==2.22.2
 asgiref==3.5.2
 httpx==0.23.0
