--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
-WTForms~=3.0.1
-Werkzeug==2.2.2
+alembic==1.8.1
+async-cache~=1.1.1
+aiogram==2.22.2
+asgiref==3.5.2
 Flask==2.2.2
-Flask-Login==0.6.2
 Flask-Admin~=1.6.0
+Flask-Login==0.6.2
 Flask-SQLAlchemy~=2.5.1
+Flask-Migrate==3.1.0
 Flask-WTF~=1.0.1
 openpyxl==3.0.10
 python-docx~=0.8.11
@@ -13,8 +16,7 @@ pytest-asyncio==0.20.1
 pytest-httpx==0.21.1
 icalendar==5.0.1
 pytz==2022.5
-aiogram==2.22.2
-asgiref==3.5.2
 httpx==0.23.0
-async-cache~=1.1.1
 phpserialize~=1.3
+WTForms~=3.0.1
+Werkzeug==2.2.2
