--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,21 @@
-alembic==1.8.1
+alembic==1.9.0
 async-cache~=1.1.1
 aiogram==2.23.1
-asgiref==3.5.2
+asgiref==3.6.0
 Flask==2.2.2
 Flask-Admin~=1.6.0
 Flask-Login==0.6.2
-Flask-SQLAlchemy~=2.5.1
-Flask-Migrate==3.1.0
 Flask-WTF~=1.0.1
 openpyxl==3.0.10
 python-docx~=0.8.11
 python-dotenv==0.21.0
 pytest==7.2.0
-pytest-asyncio==0.20.2
+pytest-asyncio==0.20.3
 pytest-httpx==0.21.2
 icalendar==5.0.3
-pytz==2022.6
+pytz==2022.7
 httpx==0.23.1
 phpserialize~=1.3
 WTForms~=3.0.1
 Werkzeug==2.2.2
+SQLAlchemy==1.4.45
