--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 alembic==1.9.2
-async-cache==1.1.1
 aiogram==2.24
 asgiref==3.6.0
 Flask==2.2.2
 Flask-Login==0.6.2
 Flask-WTF==1.1.1
+Flask-SQLAlchemy==3.0.2
 openpyxl==3.0.10
 python-docx~=0.8.11
 python-dotenv==0.21.1
@@ -15,7 +15,7 @@ icalendar==5.0.4
 pytz==2022.7.1
 httpx==0.23.3
 phpserialize~=1.3
-SQLAlchemy==1.4.46
+SQLAlchemy==2.0.0
 WTForms==3.0.1
 WTForms-SQLAlchemy==0.3
 Werkzeug==2.2.2
