Payment Calculator database added

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,21 @@
-alembic==1.10.2
+alembic==1.10.4
 aiogram==2.25.1
 asgiref==3.6.0
-Flask==2.2.3
+Flask==2.3.2
 Flask-Login==0.6.2
 Flask-WTF==1.1.1
 openpyxl==3.1.2
 python-docx~=0.8.11
 python-dotenv==1.0.0
-pytest==7.2.2
+pytest==7.3.1
 pytest-asyncio==0.21.0
-pytest-httpx==0.21.3
-icalendar==5.0.4
-pytz==2023.2
-httpx==0.23.3
+pytest-httpx==0.22.0
+icalendar==5.0.5
+pytz==2023.3
+httpx==0.24.0
 phpserialize~=1.3
-SQLAlchemy==1.4.46
+SQLAlchemy==2.0.12
+Flask-SQLAlchemy==3.0.3
 WTForms==3.0.1
 WTForms-SQLAlchemy==0.3
-Werkzeug==2.2.3
+Werkzeug==2.3.3
