--- a/tools/data_payment/increase_data.json
+++ b/tools/data_payment/increase_data.json
@@ -2,31 +2,31 @@
   "2018": {
     "name": "Индексация 2018 - 4%",
     "value": 1.04,
-    "document_id": "",
+    "document_id": 10,
     "apply_to": ["Специальное звание"]
   },
   "2019": {
     "name": "Индексация 2019 - 4,3%",
     "value": 1.043,
-    "document_id": "",
+    "document_id": 11,
     "apply_to": ["Специальное звание"]
   },
   "2020": {
     "name": "Индексация 2020 - 3%",
     "value": 1.03,
-    "document_id": "",
+    "document_id": 12,
     "apply_to": ["Специальное звание"]
   },
   "2021": {
     "name": "Индексация 2021 - 3,7%",
     "value": 1.037,
-    "document_id": "",
+    "document_id": 13,
     "apply_to": ["Специальное звание"]
   },
   "2022": {
     "name": "Индексация 2022 - 4%",
     "value": 1.04,
-    "document_id": "",
+    "document_id": 14,
     "apply_to": ["Занимаемая должность", "Специальное звание"]
   }
 }
