simple LDAP auth added

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,7 @@
 SECRET_KEY='your secret key here'
 APEKS_URL='your url here'
 APEKS_TOKEN='your token here'
+AD_DOMAIN='domain'
+AD_SERVER='host'
+AD_SEARCH_TREE='dc=dc,dc=dc'
 TELEGRAM_TOKEN='your token here'
