--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 alembic==1.11.1
 aiogram==2.25.1
-asgiref==3.6.0
+asgiref==3.7.1
 Flask==2.3.2
 Flask-Login==0.6.2
 Flask-WTF==1.1.1
@@ -14,8 +14,9 @@ icalendar==5.0.5
 pytz==2023.3
 httpx==0.24.1
 phpserialize~=1.3
-SQLAlchemy==2.0.14
+SQLAlchemy==2.0.15
 Flask-SQLAlchemy==3.0.3
 WTForms==3.0.1
 WTForms-SQLAlchemy==0.3
 Werkzeug==2.3.4
+ldap3~=2.9.1
