--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,22 @@
-alembic==1.11.1
-aiogram==2.25.1
-asgiref==3.7.1
-Flask==2.3.2
-Flask-Login==0.6.2
-Flask-WTF==1.1.1
+alembic==1.13.0
+aiogram==3.2.0
+asgiref==3.7.2
+Flask==3.0.0
+Flask-Login==0.6.3
+Flask-WTF==1.2.1
 openpyxl==3.1.2
-python-docx~=0.8.11
+python-docx==1.1.0
 python-dotenv==1.0.0
-pytest==7.3.1
-pytest-asyncio==0.21.0
-pytest-httpx==0.22.0
-icalendar==5.0.5
-pytz==2023.3
-httpx==0.24.1
+pytest==7.4.3
+pytest-asyncio==0.23.2
+pytest-httpx==0.27.0
+icalendar==5.0.11
+pytz==2023.3.post1
+httpx==0.25.2
 phpserialize~=1.3
-SQLAlchemy==2.0.15
-Flask-SQLAlchemy==3.0.3
-WTForms==3.0.1
+SQLAlchemy==2.0.23
+Flask-SQLAlchemy==3.1.1
+WTForms==3.1.1
 WTForms-SQLAlchemy==0.3
-Werkzeug==2.3.4
+Werkzeug==3.0.1
 ldap3~=2.9.1
