refactoring, added service DB layer

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,9 @@
-SECRET_KEY='your secret key here'
 APEKS_URL='your url here'
 APEKS_TOKEN='your token here'
+
+LDAP_AUTH='false'
 AD_DOMAIN='domain'
 AD_SERVER='host'
 AD_SEARCH_TREE='dc=dc,dc=dc'
+
 TELEGRAM_TOKEN='your token here'
