refactoring, holidays report added

--- a/tools/data_payment/increase_data.json
+++ b/tools/data_payment/increase_data.json
@@ -28,5 +28,11 @@
     "value": 1.04,
     "document_id": 14,
     "apply_to": ["Занимаемая должность", "Специальное звание"]
+  },
+  "2023": {
+    "name": "Индексация 2023 - 10,5%",
+    "value": 1.105,
+    "document_id": 16,
+    "apply_to": ["Занимаемая должность", "Специальное звание"]
   }
 }
