staff app stable_staff view added

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
+SECRET_KEY='some secret key'
 APEKS_URL='your url here'
 APEKS_TOKEN='your token here'
 
@@ -5,5 +6,10 @@ LDAP_AUTH='false'
 AD_DOMAIN='domain'
 AD_SERVER='host'
 AD_SEARCH_TREE='dc=dc,dc=dc'
+
+MONGO_DB_USER='user'
+MONGO_DB_PASS='password'
+MONGO_DB_URL='mongo_url'
+MONGO_DB_NAME='organization_staff'
 
 TELEGRAM_TOKEN='your token here'
