Expanded MongoDB connection string setting

--- a/.env.example
+++ b/.env.example
@@ -11,5 +11,7 @@ MONGO_DB_USER='user'
 MONGO_DB_PASS='password'
 MONGO_DB_URL='mongo_url'
 MONGO_DB_NAME='organization_staff'
+MONGO_DB_AUTH_SOURCE='admin'
+MONGO_DB_AUTH_MECHANISM='DEFAULT'
 
 TELEGRAM_TOKEN='your token here'
