--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,8 @@ SECRET_KEY='some secret key'
 APEKS_URL='your url here'
 APEKS_TOKEN='your token here'
 
+ORGANIZATION_NAME='Название организации'
+
 LDAP_AUTH='false'
 AD_DOMAIN='domain'
 AD_SERVER='host'
@@ -13,5 +15,3 @@ MONGO_DB_URL='mongo_url'
 MONGO_DB_NAME='organization_staff'
 MONGO_DB_AUTH_SOURCE='admin'
 MONGO_DB_AUTH_MECHANISM='DEFAULT'
-
-TELEGRAM_TOKEN='your token here'
