--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,16 @@
 alembic==1.13.1
-Flask==3.0.1
+asgiref==3.7.2
+Flask==3.0.2
 Flask-Login==0.6.3
 Flask-WTF==1.2.1
 openpyxl==3.1.2
 python-docx==1.1.0
 python-dotenv==1.0.1
-pytest==7.4.4
+pytest==8.0.0
 pytest-asyncio==0.23.4
-pytest-httpx==0.28.0
+pytest-httpx==0.29.0
 icalendar==5.0.11
-pytz==2023.4
+pytz==2024.1
 httpx==0.26.0
 phpserialize~=1.3
 SQLAlchemy==2.0.25
