--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,22 @@
 alembic==1.13.1
-asgiref==3.7.2
+asgiref==3.8.1
 Flask==3.0.2
 Flask-Login==0.6.3
 Flask-WTF==1.2.1
 openpyxl==3.1.2
 python-docx==1.1.0
 python-dotenv==1.0.1
-pytest==7.4.4
-pytest-asyncio==0.23.5
-pytest-httpx==0.29.0
-icalendar==5.0.11
+pytest==8.1.1
+pytest-asyncio==0.23.6
+pytest-httpx==0.30.0
+icalendar==5.0.12
 pytz==2024.1
-httpx==0.26.0
+httpx==0.27.0
 phpserialize~=1.3
-SQLAlchemy==2.0.27
+SQLAlchemy==2.0.29
 Flask-SQLAlchemy==3.1.1
 WTForms==3.1.2
 WTForms-SQLAlchemy==0.4.1
 Werkzeug==3.0.1
 ldap3~=2.9.1
-pymongo~=4.6.1
+pymongo==4.6.2
