--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,21 @@
-alembic==1.13.1
+alembic==1.13.2
 asgiref==3.8.1
 Flask==3.0.3
 Flask-Login==0.6.3
 Flask-WTF==1.2.1
-openpyxl==3.1.2
-python-docx==1.1.0
+openpyxl==3.1.5
+python-docx==1.1.2
 python-dotenv==1.0.1
-pytest==8.1.1
-pytest-asyncio==0.23.6
+pytest==8.2.2
+pytest-asyncio==0.23.7
 pytest-httpx==0.30.0
-icalendar==5.0.12
+icalendar==5.0.13
 pytz==2024.1
 httpx==0.27.0
-phpserialize~=1.3
-SQLAlchemy==2.0.29
+phpserialize==1.3
 Flask-SQLAlchemy==3.1.1
 WTForms==3.1.2
 WTForms-SQLAlchemy==0.4.1
-Werkzeug==3.0.2
-ldap3~=2.9.1
-pymongo==4.6.3
+Werkzeug==3.0.3
+ldap3==2.9.1
+pymongo==4.8.0
