Docker files added. Database initial data loaders fixes.

--- a/.env.example
+++ b/.env.example
@@ -9,9 +9,9 @@ AD_DOMAIN='domain'
 AD_SERVER='host'
 AD_SEARCH_TREE='dc=dc,dc=dc'
 
-MONGO_DB_USER='user'
-MONGO_DB_PASS='password'
-MONGO_DB_URL='mongo_url'
+MONGO_DB_USER='root'
+MONGO_DB_PASS='example'
+MONGO_DB_URL='localhost:27017'
 MONGO_DB_NAME='organization_staff'
-MONGO_DB_AUTH_SOURCE='admin'
+MONGO_DB_AUTH_SOURCE:='admin'
 MONGO_DB_AUTH_MECHANISM='DEFAULT'
